force-app/main/default/objects/EYI_Bank_GL_Codes__c/EYI_Bank_GL_Codes__c.object-meta.xml
<CustomObject>
    <label>Bank GL Codes</label>
    <nameField>
        <label>Bank GL Codes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank GL Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>