force-app/main/default/objects/EYI_Bank_GL_Codes__c/fields/EYI_Bank_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_Account_Type__c</fullName>
    <label>Bank Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COLLECTION Acc</fullName>
            </value>
            <value>
                <fullName>CORPUS FUND Acc</fullName>
            </value>
            <value>
                <fullName>CURRENT Acc</fullName>
            </value>
            <value>
                <fullName>ESCROW Ac</fullName>
            </value>
            <value>
                <fullName>E TAX Acc</fullName>
            </value>
            <value>
                <fullName>EXPENSES Acc</fullName>
            </value>
            <value>
                <fullName>MAINTENANCE Acc</fullName>
            </value>
            <value>
                <fullName>OD Acc</fullName>
            </value>
            <value>
                <fullName>RERA Acc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>