force-app/main/default/objects/EYI_Bank_GL_Codes__c/fields/EYI_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>