force-app/main/default/objects/EYI_Bank_GL_Codes__c/fields/EYI_Cheque_In_favour_of__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cheque_In_favour_of__c</fullName>
    <label>Cheque In favour of</label>
    <length>250</length>
    <type>Text</type>
</CustomField>