force-app/main/default/objects/EYI_Bank_GL_Codes__c/fields/EYI_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Company_Code__c</fullName>
    <label>Company Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>