force-app/main/default/objects/EYI_Bank_GL_Codes__c/fields/EYI_Company_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_Company_Description__c</fullName>
    <label>Company Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>