force-app/main/default/objects/EYI_Bank_GL_Codes__c/fields/EYI_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_GL_Code__c</fullName>
    <externalId>true</externalId>
    <label>GL Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>