force-app/main/default/objects/EYI_Bank_GL_Codes__c/fields/EYI_GL_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_GL_Description__c</fullName>
    <label>GL Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>