force-app/main/default/objects/EYI_Bank_GL_Codes__c/fields/EYI_MICR__c.field-meta.xml
<CustomField>
    <fullName>EYI_MICR__c</fullName>
    <label>MICR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>