force-app/main/default/objects/EYI_Bank_GL_Codes__c/fields/EYI_Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>EYI_Profit_Center__c</fullName>
    <label>Profit Center</label>
    <length>100</length>
    <type>Text</type>
</CustomField>