force-app/main/default/objects/EYI_Bank_GL_Codes__c/fields/EYI_Project__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>EYI_Project__c</referenceTo>
    <relationshipLabel>Bank GL Codes</relationshipLabel>
    <relationshipName>EYI_Bank_GL_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>