force-app/main/default/objects/EYI_Bank_GL_Codes__c/fields/EYI_Project_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_Description__c</fullName>
    <label>Project Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>