force-app/main/default/objects/EYI_Bank_GL_Codes__c/fields/EYI_SAP_Project__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Project__c</fullName>
    <label>SAP Project</label>
    <length>100</length>
    <type>Text</type>
</CustomField>