force-app/main/default/objects/EYI_Bank_GL_Codes__c/fields/EYI_Sub_Merchant_Id__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sub_Merchant_Id__c</fullName>
    <label>Sub Merchant Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>