force-app/main/default/objects/EYI_Bank_GL_Codes__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>