force-app/main/default/objects/EYI_Bank_GL_Codes__c/fields/Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_ID__c</fullName>
    <label>Merchant ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>