force-app/main/default/objects/EYI_Bank_GL_Codes__c/fields/Salt__c.field-meta.xml
<CustomField>
    <fullName>Salt__c</fullName>
    <label>Salt</label>
    <length>50</length>
    <type>Text</type>
</CustomField>